Project saga_be {
  database_type: 'MySQL'
  Note: 'Figure 2.7 - Database schema: Notification'
}

Table notification_broadcast {
  id char(36) [pk, not null]
  sender_user_id char(36) [not null]
  audience varchar(64) [not null]
  title varchar(160) [not null]
  message varchar(1000) [not null]
  idempotency_key varchar(128) [not null]
  request_fingerprint varchar(64) [not null]
  status varchar(32) [not null]
  recipient_count int [not null]
  notification_count int [not null]
  delivery_queued_count int [not null]
  completed_at datetime(6)
  created_at datetime(6) [not null]
  updated_at datetime(6) [not null]
}

Table user_notification {
  id char(36) [pk, not null]
  recipient_user_id char(36) [not null]
  broadcast_id char(36)
  notification_type varchar(64) [not null]
  title varchar(160) [not null]
  message varchar(1000) [not null]
  action_url varchar(500)
  event_key varchar(255)
  read_at datetime(6)
  created_at datetime(6) [not null]
  updated_at datetime(6) [not null]
}

Table firebase_installation {
  id char(36) [pk, not null]
  owner_user_id char(36) [not null]
  firebase_installation_id varchar(255) [not null, unique]
  fcm_token varchar(512) [unique]
  platform varchar(16)
  active tinyint(1) [not null]
  last_registered_at datetime(6) [not null]
  revoked_at datetime(6)
  version bigint [not null]
  created_at datetime(6) [not null]
  updated_at datetime(6) [not null]
}

Table notification_delivery {
  id char(36) [pk, not null]
  notification_id char(36) [not null]
  installation_id char(36) [not null]
  delivery_status varchar(32) [not null]
  attempt_count int [not null]
  last_attempt_at datetime(6)
  processing_started_at datetime(6)
  sent_at datetime(6)
  failure_code varchar(64)
  version bigint [not null]
  created_at datetime(6) [not null]
  updated_at datetime(6) [not null]
}

Table email_outbox {
  id char(36) [pk, not null]
  recipient_user_id char(36)
  recipient_email varchar(255) [not null]
  email_type varchar(64) [not null]
  template_key varchar(128)
  payload_json json
  delivery_status varchar(32) [not null]
  attempt_count int [not null]
  scheduled_at datetime(6)
  sent_at datetime(6)
  last_failure_code varchar(64)
  last_attempt_at datetime(6)
  created_at datetime(6) [not null]
  updated_at datetime(6) [not null]
}

Ref: user_notification.broadcast_id > notification_broadcast.id
Ref: notification_delivery.notification_id > user_notification.id
Ref: notification_delivery.installation_id > firebase_installation.id
